--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -4,26 +4,8 @@ services:
 
   nginx:
     stdin_open: true
-
-  elasticsearch:
-    stdin_open: true
-    restart: always
-    environment:
-      ES_JAVA_OPTS: "-Xmx256m -Xms256m"
-      ELASTIC_PASSWORD: changeme
-      # Use single node discovery in order to disable production mode and avoid bootstrap checks.
-      # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
-      discovery.type: single-node
-
-  logstash:
-    stdin_open: true
-    restart: always
-    environment:
-      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
-
-  kibana:
-    stdin_open: true
-    restart: always
+    ports: 
+      - 3000:80
 
   portainer:
     stdin_open: true
@@ -43,7 +25,7 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=secret
-      - MONGO_INITDB_DATABASE=vanillanodemongo
+      - MONGO_INITDB_DATABASE=nestauthmongo
 
   mongo-express:
     stdin_open: true
@@ -55,25 +37,29 @@ services:
 
   apiauth:
     build: 
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
+    args:
+      NODE_ENV: development
       # target: dev
     stdin_open: true
     volumes: 
       - /app/node_modules 
-      - ../../app/services/auth:/app
+      - ../api:/app
     environment:
       - REDIS=redis
-      - PORT=5002
+      - PORT=3000
       # to specify any other option for connection add ?retryWrites=true
       # to import data in mongo mongorestore --gzip --archive=sampledata.archive.gz
-      - DBURL=mongodb://<MONGOUSER>:<MONGOPASS>@mongodb:27017
-      - DBNAME=vanillanodemongo
-      - NODE_ENV=development
-      - MONGOPASS=secret
       - MONGOUSER=root
+      - MONGOPASS=secret
+      - DBURL=mongodb://<MONGOUSER>:<MONGOPASS>@mongodb:27017
+      - DBNAME=nestauthmongo
+
+      - NODE_ENV=development
       - CORS=http://localhost:3000
-      - JWT_KEY=uy6hw65hywtrnbewhnterwhg
+
       - JWT_TTL=365d
+      - JWT_KEY=uy6hw65hywtrnbewhnterwhg
       - RESET_TOKEN_EXP=600
       - SENDGRID_USER=nazemi.works@gmail.com
       - SENDGRID_PASS=https://signup.sendgrid.
