--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -4,26 +4,9 @@ services:
 
   nginx:
     stdin_open: true
-
-  elasticsearch:
-    stdin_open: true
-    restart: always
-    environment:
-      ES_JAVA_OPTS: "-Xmx256m -Xms256m"
-      ELASTIC_PASSWORD: changeme
-      # Use single node discovery in order to disable production mode and avoid bootstrap checks.
-      # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
-      discovery.type: single-node
-
-  logstash:
-    stdin_open: true
-    restart: always
-    environment:
-      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
-
-  kibana:
-    stdin_open: true
-    restart: always
+    ports: 
+      - 80:80
+      - 443:443
 
   portainer:
     stdin_open: true
@@ -41,9 +24,9 @@ services:
   mongodb:
     stdin_open: true
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=secret
-      - MONGO_INITDB_DATABASE=vanillanodemongo
+      - MONGO_INITDB_DATABASE=${NEST_DBNAME_MONGO}
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
 
   mongo-express:
     stdin_open: true
@@ -54,9 +37,18 @@ services:
       - ME_CONFIG_SITE_BASEURL=/__info__/mongo-express
 
   apiauth:
+    deploy:
+      replicas: 2
+      update_config: 
+        parallelism: 2
+        delay: 10s
+      restart_policy: 
+        condition: any
     build: 
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
       # target: dev
+    args: 
+      NODE_ENV: production
     stdin_open: true
     volumes: 
       - /app/node_modules 
@@ -67,18 +59,11 @@ services:
       # to specify any other option for connection add ?retryWrites=true
       # to import data in mongo mongorestore --gzip --archive=sampledata.archive.gz
       - DBURL=mongodb://<MONGOUSER>:<MONGOPASS>@mongodb:27017
-      - DBNAME=vanillanodemongo
-      - NODE_ENV=development
-      - MONGOPASS=secret
-      - MONGOUSER=root
-      - CORS=http://localhost:3000
-      - JWT_KEY=uy6hw65hywtrnbewhnterwhg
-      - JWT_TTL=365d
-      - RESET_TOKEN_EXP=600
-      - SENDGRID_USER=nazemi.works@gmail.com
-      - SENDGRID_PASS=https://signup.sendgrid.
-      - EMAIL_FROM=security@devref.ir
-      - SMTP_SERVER=fdsfdsfsdfsdfsdfsdf
-
-
-# docker-compose run can run command shell 
+      - DBNAME=${NEST_DBNAME_MONGO}
+      - NODE_ENV=production
+      - MONGOPASS=${NEST_MONGO_PASSWORD}
+      - MONGOUSER=${NEST_MONGO_USER}
+      - CORS=${NEST_CORS}
+      - JWT_KEY=${NEST_JWT_KEY}
+      - JWT_TTL=${NEST_JWT_TTL}
+      - RESET_TOKEN_EXP=${NEST_RESET_TOKEN_EXP}
