--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,82 +3,69 @@ version: '3.4'
 services:
 
   nginx:
-    stdin_open: true
-
-  elasticsearch:
-    stdin_open: true
     restart: always
-    environment:
-      ES_JAVA_OPTS: "-Xmx256m -Xms256m"
-      ELASTIC_PASSWORD: changeme
-      # Use single node discovery in order to disable production mode and avoid bootstrap checks.
-      # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
-      discovery.type: single-node
-
-  logstash:
-    stdin_open: true
-    restart: always
-    environment:
-      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
-
-  kibana:
-    stdin_open: true
-    restart: always
+    image: 'nginx:stable-alpine'
+    tty: true
+    depends_on: 
+      - apiauth
+      - redis
+      - mongodb
+      - redis-commander
+      - mongo-express
+      - portainer
+    volumes: 
+      # remember!!!!!!! add trust proxy to nodejs services
+      - ../default.conf:/etc/nginx/conf.d/default.conf:ro #read only 
 
   portainer:
-    stdin_open: true
+    image: portainer/portainer-ce
+    restart: always
+    volumes:
+      - portainer_data_vol:/data
+      - /var/run/docker.sock:/var/run/docker.sock 
 
   redis:
-    stdin_open: true
-    environment:
-      - ALLOW_EMPTY_PASSWORD=yes
-
+    image: "redis:7.0.0-alpine"
+    restart: always
+    volumes:
+      - redis_vol:/var/lib/redis
+  
   redis-commander:
-    environment:
-      - REDIS_HOSTS=local:redis:6379
-      - PORT=8083
+    image: "rediscommander/redis-commander:latest"
+    restart: always
+    depends_on: 
+      - redis
 
   mongodb:
-    stdin_open: true
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=secret
-      - MONGO_INITDB_DATABASE=vanillanodemongo
+    image: mongo
+    restart: always
+    volumes:
+      - ../db/docker-entrypoint-initdb.d/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - mongo_vol:/data/db
 
   mongo-express:
-    stdin_open: true
-    environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=secret
-      - ME_CONFIG_MONGODB_SERVER=mongodb
-      - ME_CONFIG_SITE_BASEURL=/__info__/mongo-express
+    image: mongo-express
+    restart: always 
+    depends_on:
+      - mongodb
 
   apiauth:
     build: 
-      dockerfile: Dockerfile.dev
-      # target: dev
-    stdin_open: true
-    volumes: 
-      - /app/node_modules 
-      - ../../app/services/auth:/app
+      context: ../api
+      image: penkong/nestauthmongo
+    restart: always
     environment:
-      - REDIS=redis
-      - PORT=5002
-      # to specify any other option for connection add ?retryWrites=true
-      # to import data in mongo mongorestore --gzip --archive=sampledata.archive.gz
-      - DBURL=mongodb://<MONGOUSER>:<MONGOPASS>@mongodb:27017
-      - DBNAME=vanillanodemongo
-      - NODE_ENV=development
-      - MONGOPASS=secret
-      - MONGOUSER=root
-      - CORS=http://localhost:3000
-      - JWT_KEY=uy6hw65hywtrnbewhnterwhg
-      - JWT_TTL=365d
-      - RESET_TOKEN_EXP=600
-      - SENDGRID_USER=nazemi.works@gmail.com
-      - SENDGRID_PASS=https://signup.sendgrid.
-      - EMAIL_FROM=security@devref.ir
-      - SMTP_SERVER=fdsfdsfsdfsdfsdfsdf
+      - PORT=3000
+    depends_on:
+      - mongodb
+      - redis
+  
 
 
-# docker-compose run can run command shell 
+volumes:
+  mongo_vol:
+    driver: local
+  portainer_data_vol:
+    driver: local
+  redis_vol:
+    driver: local
